--- a/admin/web/package.json
+++ b/admin/web/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "serve": "node openDocument.js && vite --host --mode development",
+        "dev": "vite --host --mode development",
         "build": "vite build --mode production",
         "limit-build": "npm install increase-memory-limit-fixbug cross-env -g && npm run fix-memory-limit && node ./limit && npm run build",
         "preview": "vite preview",
@@ -31,7 +32,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-legacy": "^1.4.4",
-        "@vitejs/plugin-vue": "latest",
+        "@vitejs/plugin-vue": "2.3.3",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
