--- a/admin/web/package.json
+++ b/admin/web/package.json
@@ -11,15 +11,16 @@
         "fix-memory-limit": "cross-env LIMIT=4096 increase-memory-limit"
     },
     "dependencies": {
-        "@element-plus/icons": "0.0.11",
+        "@element-plus/icons": "^0.0.11",
         "axios": "^0.19.2",
         "core-js": "^3.6.5",
         "echarts": "4.9.0",
-        "element-plus": "1.2.0-beta.6",
+        "element-plus": "^2.4.4",
         "highlight.js": "^10.6.0",
         "marked": "^2.0.0",
         "mitt": "^3.0.0",
         "path": "^0.12.7",
+        "pinia": "^2.1.7",
         "qs": "^6.8.0",
         "quill": "^1.3.7",
         "screenfull": "^5.0.2",
