--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.5.1",
+    "@better-scroll/mouse-wheel": "^2.5.1",
+    "@better-scroll/scroll-bar": "^2.5.1",
     "@vueuse/core": "^10.7.1",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
